server/static/sass/_base.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

@import 'variables';
@import 'compass/css3';
@import 'compass/utilities/general/clearfix';


/*****************************
 * Generic classes
 **************************/
.hide-initial {
  display: none;
}

.hide {
  display: none !important;
}

/* For modern browsers */
.clearfix:before,
.clearfix:after {
  content: "";
  display: table;
}
.clearfix:after {
  clear: both;
}
/* For IE 6/7 (trigger hasLayout) */
.clearfix {
  zoom: 1;
}

// This overrides Bootstrap's well class (it now looks raised instead of sunken)
.well {
  // TODO(david): These grays should not be hardcoded, or could be off-gray
  @include background(linear-gradient(top, #FCFCFC, #F9F9F9));
  // TODO(david): these colors should be darkened as much as the main text color
  //     was darkened (from http://opalang.org/)
  border-color: $wellBorderColor;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}

.select2-inline {
  line-height: 28px;
}

////////////////////////////////////////////////////////////////////////////////
// Overrides

// TODO(david): Do this in a better way
.select2-search .select2-input  {
  font-family: $baseFontFamily;
}

.navbar-search .search-query {
  line-height: 17px;
}

.tooltip-inner {
  height: 18px;
  line-height: 18px;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
}


/****************************
 * Base page styles
 *************************/

// apply a natural box layout model to all elements
// See for more info http://paulirish.com/2012/box-sizing-border-box-ftw

// Uncomment to debug boxes
//* {
  //outline: 1px red solid;
//}

// TODO(david): Make this work. Footer should be at bottom.
html, body {
  height: 100%;
  min-height: 100%;
}

body {
  // TODO(mack): setup image dir to auto-use
  @include background(url(/static/img/pinstripe.png));
  background-attachment: fixed;

  // Background we tried... last one is the one we're using
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/grey.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/lil_fiber.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/light_wool.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/square_bg.png), url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/gridme.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/square_bg.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/struckaxiom.png));
  //@include background(url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/pinstripe.png));
}

// TODO(mack): move landing page stuff into separate file

.container-fluid {
  min-width: 1000px;
  max-width: 1300px;
  margin-left: auto;
  margin-right: auto;
}

a:hover {
  cursor: pointer;
}

.navbar {
  z-index: 100;
  position: relative;
  background: rgba(250, 250, 250, 0.75);
  @include box-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
  height: 54px;

  .container-fluid {
    min-width: 200px;
    .brand {
      .logo {
        position: absolute;
        width: 75px;
        height: 35px;
        @include transition(all 0.3s ease-out);
      }
      .logo-no-color {
        background: url('/static/img/flow-logo-75x35-555.png') no-repeat;
      }
      .logo-color {
        background: url('/static/img/flow-logo-75x35.png') no-repeat;
        opacity: 0;
      }
      .beta {
        margin-left: 85px;
        font-variant: small-caps;
        letter-spacing: 1px;
        font-size: 30px;
        line-height: 32px;
      }
      &:hover {
        .logo-no-color {
          opacity: 0;
          @include transition(all 0.3s ease-out);
        }
        .logo-color {
          opacity: 1.0;
          @include transition(all 0.3s ease-out);
        }
      }
    }

    .nav .divider-vertical {
      height: 54px;
    }

    .nav li {
      line-height: 25px;
      a {
        border-top: 3px solid transparent;
        @include transition(all 0.3s ease-out);

        &:hover {
          @include transition(all 0.3s ease-out);
          border-top: 3px solid $flowBlue;
          color: $flowBlue;
        }
      }
      &.active a {
        @include box-shadow(none);
        background-color: transparent;
        border-top: 3px solid #444;
      }
    }
  }
}

footer {
  // TODO(david): Figure out background-size: cover instead of height
  // TODO(david): FIgure out empty gap on Sandy's computer
  height: 388px;
  margin-top: 200px;
  #landing-footer-text {
    padding-top: 30px;
    text-align: center;
  }
}

